# PHM

./: .~lock.training_data_flat.csv#  analysis.ipynb  analyze.py  baseline_tree.py  best_res.txt  dim_reduce.ipynb  dimensionality_reduction.py  feature_engineering.py  kalman.py  kalman_RUL.py  kalman_eval.py  kalman_opt.db  kalman_opt.py  kalman_opt_1fold.db  main.py  preprocess.py  presentation.typst  problem_info.md  pyproject.toml  rolling_tree.py  single_engine_RUL.py  time_explore.ipynb  tmp.py  train.py  train_pca.py  update_nb.py
__marimo__/session/: kalman.py.json  kalman_RUL.py.json  single_engine_RUL.py.json
layouts/: kalman.grid.json
slides/: refs.bib  report.typ  slides.typ
slides copy/: slides.typ
src/: data.py  features.py  kalman_utils.py  metrics.py  models.py
